# sqltyper

./: .envrc  .eslintignore  .eslintrc.js  .gitignore  CHANGELOG.md  CHANGELOG.old.md  Cargo.toml  README.md  build.rs  jest.config.js  package.json  shell.nix  tsconfig.dist.json  tsconfig.json  tslint.json
.circleci/: config.yml
.github/workflows/: automerge.yml  release-drafter.yml  tests.yml
src/: InferM.ts  TaskEitherW.ts  Warn.ts  ast.ts  cli.ts  clients.ts  codegen.ts  const-utils.ts  constHelpers.ts  constants.ts  describe.ts  field-nullability.ts  fp-utils.ts  func-utils.ts  index.ts  infer.ts  parser.ts  pkginfo.ts  preprocess.ts  prettify.ts  schema.ts  source.ts  tstype.ts  types.ts  warnings.ts
src-rs/: ast.rs  error.rs  infer.rs  lib.rs  main.rs  preprocess.rs  types.rs
src-rs/ast/: common.rs  cte.rs  delete.rs  expression.rs  insert.rs  join.rs  misc.rs  mod.rs  select.rs  update.rs
src-rs/infer/: cache.rs  columns.rs  context.rs  db.rs  error.rs  expression.rs  mod.rs  non_null_expressions.rs  null_safety.rs  param.rs  pg_client.rs  rowcount.rs  schema_client.rs  select_list.rs  source_columns.rs
src-rs/parser/: common.rs  cte.rs  delete.rs  expression.rs  insert.rs  join.rs  keyword.rs  misc.rs  mod.rs  result.rs  select.rs  special_function.rs  tests.rs  token.rs  typecasts.rs  update.rs  utils.rs
src-rs/utils/: builtin_properties.rs  mod.rs
src/infer/: error.ts  index.ts  select.ts  source.ts
src/parser/: index.ts  special-functions.ts  special-typecasts.ts  token.ts  typecasts.ts  utils.ts
src/pg/: client.js  connection.js  (+4 more)
tests/: Warn.spec.ts  cli.spec.ts  integration.rs  integration.spec.ts  parser.spec.ts  warnings.spec.ts
(+78 files in other folders)
