[package]
name = "sqltyper"
version = "1.4.0-alpha.0"
edition = "2018"

[lib]
path = "src-rs/lib.rs"

[[bin]]
name = "sqltyper"
path = "src-rs/main.rs"

[dependencies]
async-recursion = "1.0.0"
lazy_static = "1.4.0"
log = "0.4.14"
nom = "7.0.0"
nom-supreme = "0.6.0"
postgres-types = { version = "0.2.2", features = ["with-serde_json-1"] }
regex = "1"
serde = { version = "1.0.136", features = ["derive"] }
strum = "0.23.0"
strum_macros = "0.23.1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.5"
